fixed styling of Search results

--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -31,7 +31,8 @@
   background-color: white;
   border-radius: 30px;
   display: flex;
-  align-items: center;
+  align-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .searchIcon {
