--- a/src/components/topbar/resultComponent.css
+++ b/src/components/topbar/resultComponent.css
@@ -5,6 +5,8 @@
     border-width: 1px;
     background-color: whitesmoke;
     padding: 2px;
+    position: relative;
+    z-index: 9999;
 }
 .search-results{
     
@@ -12,4 +14,5 @@
 .button-container{
     display: flex;
     justify-content: space-between;
+    padding-left: 100px;
 }
